# cat

./: pyproject.toml
catalysts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
catalysts/migrations/: 0001_initial.py  0002_alter_catalyst_au_peg.py  0002_remove_catalyst_target_au_content_catalyst_mixed_peg.py  0003_alter_catalyst_au_peg.py
config/: settings.py  urls.py
dataBET/: admin.py  apps.py  models.py
dataBET/migrations/: 0001_initial.py
dataGC/: admin.py  apps.py  models.py  serializers.py  urls.py
dataGC/migrations/: 0001_initial.py
dataTEM/: admin.py  apps.py  models.py  views.py
dataTEM/migrations/: 0001_initial.py
dataTGA/: admin.py  apps.py  models.py
dataTGA/migrations/: 0001_initial.py
measurements/: admin.py  models.py
measurements/migrations/: 0001_initial.py  0002_gc_icp_oes_saxs_tem_tga_rename_measurement_bet.py
prec_Au/: admin.py  apps.py  models.py  serializers.py  views.py
prec_Au/migrations/: 0001_initial.py
prec_Au_PEG/: admin.py  apps.py  models.py  urls.py
prec_Au_PEG/migrations/: 0001_initial.py  0002_alter_info_au_alter_info_peg.py
prec_PEG/: admin.py  apps.py  models.py
prec_PEG/migrations/: 0001_initial.py
precursors/: admin.py  apps.py  models.py
precursors/migrations/: 0001_initial.py  0002_remove_au_peg_au_content.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
