[tool.poetry]
name = "cat"
version = "0.1.0"
description = ""
authors = ["Q_seunghanl <seunghanl@quantumcat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.6"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
